@@ -21,6 +21,13 @@ checkstyle {
 }
 
 test {
+    jvmArgs += [
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    ]
     useJUnitPlatform()
 
     // Enhance logging for failed tests
@@ -29,7 +36,6 @@ test {
         exceptionFormat = "short"
         showStandardStreams = true
     }
-
     doFirst {
         exclude "**/**UiTest*"
     }
@@ -71,7 +77,6 @@ tasks.register('uiTest', Test) {
 
 jacocoTestReport {
     dependsOn test
-
     def disallowedOS = ['ubuntu', 'nux']
     def os = System.getProperty("os.name").toLowerCase()
     def isAllowed = disallowedOS.every { !os.contains(it) }
@@ -133,16 +138,25 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.0'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.7.4'
 
+    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
+
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
     testImplementation "org.testfx:testfx-core:4.0.17"
     testImplementation "org.testfx:testfx-junit5:4.0.17"
     testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'org.mockito:mockito-core:4.1.0'
+    testImplementation 'org.mockito:mockito-inline:4.1.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
 }
 
 shadowJar {
     archiveFileName = 'EZSTATES.jar'
+}
+
+run {
+    enableAssertions = true
 }
 
 defaultTasks 'clean', 'test'
